zindex is not z-index, fixed invaild css

--- a/src/css/dragtable-default.css
+++ b/src/css/dragtable-default.css
@@ -18,7 +18,7 @@
   
 .dragtable-drag-wrapper{
 	position: absolute;
-    zindex: 1000;
+    z-index: 1000;
 } 
  /*
   * this gets applied to the table copy of the col that we are dragging 
